<resources>
    <string name="app_name">CricketScorer</string>
    <string name="team_one">Team One</string>
    <string name="team_two">Team Two</string>
    <string name="team">Team</string>
    <string name="runs">Runs</string>
    <string name="wickets">Wickets</string>
    <string name="out">Out</string>
    <string name="bowled">Bowled</string>
    <string name="lbw">LBW</string>
    <string name="caught">Caught</string>
    <string name="run_out">Run Out</string>
    <string name="retire">Retire</string>
    <string name="retired">Retired</string>
    <string name="not_out">Not Out</string>
    <string name="extras">Extras</string>
    <string name="batsman">Batsman</string>
    <string name="how_out">How Out</string>
    <string name="batsman_one">Batsman 1</string>
    <string name="batsman_two">Batsman 2</string>
    <string name="edit_player">Edit Player</string>
    <string name="edit_extras">Edit Extras</string>
    <string name="name">Name</string>
    <string name="wicket">Wicket</string>
    <string name="reset">Reset Game</string>
    <string name="sure_reset">Are you sure you want to reset the game?</string>
    <string name="yes">Yes please</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save to Pdf</string>
    <string name="confirm">Confirm</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome">Welcome to CricketScorer</string>
    <string name="tutorial_offer">Would you like to take a quick tutorial?</string>
    <string name="tutorial">Tutorial</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
</resources>
